[gd_scene load_steps=12 format=3 uid="uid://dseub1o4pp5b8"]

[ext_resource type="Texture2D" uid="uid://ba00sewirwhv5" path="res://Rocky Roads/Backgrounds/clouds.png" id="1_qdnns"]
[ext_resource type="Texture2D" uid="uid://4h4p3s2eo3vu" path="res://Rocky Roads/Tilesets/tileset_forest.png" id="2_85hkp"]
[ext_resource type="PackedScene" uid="uid://r2rqunnhbi7e" path="res://Scenes/player.tscn" id="3_lu7y8"]
[ext_resource type="PackedScene" uid="uid://dm1tq4mafke7h" path="res://Scenes/coin.tscn" id="4_a0vf8"]
[ext_resource type="Script" path="res://Scripts/ContadorMonedasLabel.gd" id="5_fhxc0"]
[ext_resource type="Texture2D" uid="uid://clmyeuo5v5s85" path="res://Rocky Roads/Objects/coin_gold.png" id="6_0ddei"]
[ext_resource type="Script" path="res://Scripts/CaídaMuerto.gd" id="7_en0h7"]

[sub_resource type="TileMapPattern" id="TileMapPattern_mror4"]
tile_data = PackedInt32Array(65536, 65536, 2, 131072, 65536, 3, 196608, 65536, 4, 1, 131072, 1, 65537, 131072, 2, 131073, 131072, 3, 196609, 131072, 4, 2, 196608, 1, 65538, 196608, 2, 131074, 196608, 3, 196610, 196608, 4, 3, 262144, 1, 65539, 262144, 2, 131075, 262144, 3, 196611, 262144, 4, 4, 327680, 1, 65540, 327680, 2, 131076, 327680, 3, 196612, 327680, 4, 65541, 393216, 2, 131077, 393216, 3, 196613, 393216, 4)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cfsoq"]
texture = ExtResource("2_85hkp")
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0/terrains_peering_bit/right_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0/terrains_peering_bit/left_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_4dpyq"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "t1"
terrain_set_0/terrain_0/color = Color(0.678431, 0.027451, 0.466667, 1)
sources/0 = SubResource("TileSetAtlasSource_cfsoq")
pattern_0 = SubResource("TileMapPattern_mror4")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7uxq2"]
size = Vector2(566, 73)

[node name="Mundo2" type="Node2D"]

[node name="Clouds" type="Sprite2D" parent="."]
position = Vector2(43, 23)
scale = Vector2(1.51172, 1.01953)
texture = ExtResource("1_qdnns")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-3, 1)
tile_set = SubResource("TileSet_4dpyq")
format = 2
layer_0/tile_data = PackedInt32Array(65532, 131072, 2, 65533, 262144, 3, 65534, 262144, 2, 65535, 262144, 3, 0, 262144, 3, 1, 327680, 3, 2, 327680, 2, 65538, 262144, 3, 65537, 196608, 3, 65536, 262144, 3, 131071, 262144, 3, 131070, 262144, 2, 131069, 262144, 3, 196605, 196608, 3, 196606, 262144, 3, 196607, 327680, 3, 131072, 262144, 3, 131074, 262144, 3, 131075, 393216, 3, 131073, 262144, 3, 65531, 131072, 1, -4, 131072, 1, -3, 196608, 1, -2, 196608, 1, -1, 196608, 1, -65536, 196608, 1, -65535, 196608, 1, -65534, 327680, 1, 3, 393216, 2, 65539, 393216, 3, 131067, 65536, 3, 196603, 65536, 3, 262141, 196608, 4, 262142, 262144, 4, 262143, 327680, 4, 196609, 262144, 4, 196610, 327680, 4, 196611, 393216, 4, 262139, 65536, 4, 262140, 131072, 4, 196608, 262144, 4, 196604, 196608, 3, 131068, 196608, 3, 6, 65536, 2, 65543, 262144, 2, 65542, 65536, 3, 8, 393216, 2, 7, 262144, 1, 65544, 393216, 3, 131079, 262144, 4, 131080, 393216, 4, 131078, 65536, 4, -131072, 327680, 0, -65540, 327680, 0, -65545, 524288, 1, -131081, 131072, 0, -65538, 196608, 0, -65528, 327680, 0, -65529, 196608, 0, -65526, 524288, 1, -196596, 327680, 0, -131060, 524288, 1, -196599, 524288, 1, -327674, 196608, 0, -262138, 524288, 1, -7, 524288, 1)

[node name="Player" parent="TileMap" instance=ExtResource("3_lu7y8")]
position = Vector2(46, -24)

[node name="Coin" parent="." instance=ExtResource("4_a0vf8")]
position = Vector2(-140, -48)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true
script = ExtResource("5_fhxc0")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(-140, -122)
texture = ExtResource("6_0ddei")
hframes = 8

[node name="puntos" type="Label" parent="CanvasLayer"]
offset_left = -132.0
offset_top = -132.0
offset_right = -104.0
offset_bottom = -63.0
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/font_size = 50
text = ":"

[node name="ContadorMonedasLabel" type="Label" parent="CanvasLayer"]
offset_left = -123.0
offset_top = -131.0
offset_right = -83.0
offset_bottom = -62.0
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/font_size = 50
text = "2"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(43, -24)
zoom = Vector2(3, 3)

[node name="CaídaMuerto" type="Area2D" parent="."]
script = ExtResource("7_en0h7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CaídaMuerto"]
position = Vector2(54, 120)
shape = SubResource("RectangleShape2D_7uxq2")

[node name="Coin2" parent="." instance=ExtResource("4_a0vf8")]
position = Vector2(92, -78)

[node name="Coin3" parent="." instance=ExtResource("4_a0vf8")]
position = Vector2(77, 4)

[connection signal="body_entered" from="CaídaMuerto" to="CaídaMuerto" method="_on_body_entered"]
